# CTE

./: CMakeLists.txt  Makefile  cte  readme.md  template.cte
src/: main.cpp  process_template.cpp  process_template.h
